--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,11 +38,11 @@
     "import/prefer-default-export": "off",
     "prettier/prettier": "error",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-var-requires": "off",
     "react/jsx-filename-extension": [
       1,
-      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+      {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     ]
   },
   "settings": {
