--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-node_modules/
+/node_modules
+/.pnp
+.pnp.js
+/coverage
+/build
+dist
+environment.ts
+.env
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.idea
