--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "babel-article",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "index.tsx",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development"
+    "build:prod": "rm -rf ./dist && webpack --config webpack.config.js --mode production",
+    "start:dev": "webpack-dev-server --mode development --hot --open",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
+    "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -31,7 +34,9 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.0.2",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
+    "sass-loader": "^9.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.2",
     "ts-loader": "^6.2.1",
@@ -42,7 +47,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "copy-webpack-plugin": "^6.0.3",
     "core-js": "^3.6.4",
+    "dotenv": "^8.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
