--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,34 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "module": "commonjs",
     "rootDir": "src",
-    "outDir": "public",
+    "outDir": "./dist/",
+    "sourceMap": true,
     "jsx": "react",
     "strict": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@app/*": [
+        "src/*"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@pages/*": [
+        "src/pages/*"
+      ],
+      "@services/*": [
+        "src/services/*"
+      ]
+    }
   },
-  "include": ["src", "custom.d.ts"]
+  "include": ["src", "src/custom.d.ts"]
 }
