--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint:fix"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "lint"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
