--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "webpack-dev-server --mode development --hot --open",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "format": "prettier --write src/**/*.{ts,tsx}"
+    "format": "prettier --write src/**/*.{ts,tsx}",
+    "pre-commit": "lint-staged"
   },
   "husky": {
     "hooks": {
