Updating package.json and README file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-article",
+  "name": "ReactTS_JCBD_Template",
   "version": "0.0.1",
   "main": "index.tsx",
   "license": "MIT",
