Udpating return type for entry app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactTS_JCBD_Template",
+  "name": "reactts-jcbd-template",
   "version": "0.0.1",
   "main": "index.tsx",
   "license": "MIT",
