--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
     ],
     "import/prefer-default-export": "off",
     "prettier/prettier": "error",
-    "@typescript-eslint/explicit-function-return-type": "off",
+    // "@typescript-eslint/explicit-function-return-type": "off",
+    // "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/jsx-filename-extension": [
       1,
       {
