--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,8 +37,6 @@
     ],
     "import/prefer-default-export": "off",
     "prettier/prettier": "error",
-    // "@typescript-eslint/explicit-function-return-type": "off",
-    // "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/jsx-filename-extension": [
       1,
       {
@@ -48,6 +46,9 @@
   },
   "settings": {
     "import/resolver": {
+      "webpack": {
+        "config": "./config/paths.js"
+      },
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
