--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
 [build]
-base = "./"
-publish = "./dist/"
-command = "yarn build:prod"
+    base = "./"
+    publish = "./dist/"
+    command = "yarn build:prod"
+
+[context.production.environment]
+    API_URL='https://api.jcbd.local/'
+    SITE_NAME='Juan Carlos Blanco Delgado'
