--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "react/jsx-wrap-multilines": "off",
     "prettier/prettier": "error",
     "react/jsx-filename-extension": [
       1,
