--- a/package.json
+++ b/package.json
@@ -59,10 +59,14 @@
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "4.3.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "copy-webpack-plugin": "^6.0.3",
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
