Updating script to start running the local development with fewer arguments

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "build:prod": "rm -rf ./dist && webpack --config ./config/webpack.config.js --mode production",
-    "start:dev": "webpack-dev-server --mode development --config ./config/webpack.config.js --hot --open",
-    "frontend:start": "yarn install && yarn start:dev --host 0.0.0.0 --watch --watch-poll",
+    "start:dev": "webpack-dev-server --mode development --config ./config/webpack.config.js",
+    "frontend:start": "yarn install && yarn start:dev --host 0.0.0.0",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
     "format": "prettier --write src/**/*.{ts,tsx}",
