--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "access": "restricted"
   },
   "scripts": {
-    "build:prod": "rm -rf ./dist && webpack --config ./config/webpack.config.js --mode production",
-    "start:dev": "webpack-dev-server --mode development --config ./config/webpack.config.js",
+    "build:prod": "rm -rf ./dist && webpack --config ./config/webpack.config.js  --env.NODE_ENV=production",
+    "start:dev": "webpack-dev-server  --config ./config/webpack.config.js --env.NODE_ENV=development ",
     "frontend:start": "yarn install && yarn start:dev --host 0.0.0.0",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "^8.0.6",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "css-loader": "^4.2.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -51,18 +52,24 @@
     "fork-ts-checker-webpack-plugin": "^5.0.14",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pnp-webpack-plugin": "^1.6.4",
+    "postcss-safe-parser": "^4.0.2",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.2",
     "source-map-loader": "^1.0.1",
     "style-loader": "^1.1.2",
+    "terser-webpack-plugin": "^4.0.0",
     "ts-loader": "^8.0.2",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "url-loader": "2.3.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
